# SILA

./: .gitignore  =4.25  CHANGELOG.md  CLAUDE.md  MASTERPLAN.md  Makefile  README.md  SILA_Masterplan.md  pyproject.toml
bench/: analyze_timbre.py  benchmark_moss_perf.sh  compare_engines.py  moss-tts-server.service  moss_tts_server.py  setup_test_008.sh
bench/f0_analysis/: measure_f0.py
benchmarks/moss-tts/: benchmark_moss.py  test_002_moss_report.json  test_003_moss_report.json
configs/: default.yaml  languages.yaml  models.yaml
configs/glossaries/: example_glossary.json  test_003_zeste.json
docs/: SILA_Masterplan.html  cosyvoice_tuning_reference.md  index.html  test_suite.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  websocket.ts
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  NewJob.tsx  SegmentReview.tsx
scripts/: audio_audit.py  benchmark_tts_duration.py  show_metrics.py
src/api/: app.py
src/cli/: main.py
src/core/: context.py  glossary.py  manifest.py  models.py  segment.py  timing.py
src/engines/asr/: interface.py  qwen3_asr.py  voxtral_asr.py  whisperx_align.py  whisperx_asr.py  whisperx_diarize.py  whisperx_engine.py
src/engines/mt/: interface.py  nllb_engine.py
src/engines/qc/: basic_qc.py  (+2 more)
src/media/: assembly.py  ffmpeg.py  mixer.py  rubberband.py  snr_detect.py  srt.py  voice_profile.py
src/monitoring/: metrics.py
src/pipeline/: dag.py  events.py  runner.py  stages.py
tests/unit/: test_manifest.py  test_models.py  test_segment.py  test_timing.py
(+8 files in other folders)
